# Rust-RPG

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
examples/: landscape.rs
libs/geometry/: Cargo.toml
libs/geometry-derive/: Cargo.toml
libs/geometry-derive/src/: lib.rs
libs/geometry/src/: lib.rs  point.rs  size.rs  traits.rs  vector.rs
resources/: atlas.ron  config.ron
src/: game_state.rs  main.rs
src/controllers/: collisions.rs  input.rs  mod.rs
src/controllers/time/: mod.rs  timeout_queue.rs
src/models/: atlas.rs  enemy.rs  map.rs  media.rs  mod.rs  player.rs  powerup.rs  world.rs
src/view/: colors.rs  mod.rs  render.rs  resources.rs  sound.rs
